--- a/css/spill.css
+++ b/css/spill.css
@@ -3,7 +3,7 @@
     padding: 1rem;
 }
 
-.ingrediens-knapper {
+.ingrediens-container {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -13,8 +13,8 @@
     right: 0;
 }
 .ingrediens-knapp {
-    width: 70px;
-    height: 70px;
+    width: 5vw;
+    height: 5vw;
     filter: drop-shadow(5px 5px 5px #222);
     transition: filter 100ms ease-out, scale 100ms ease-out;
     z-index: 2;
@@ -75,20 +75,34 @@
 }
 
 .figur-container{
-    overflow: hidden;
-    width: 100vw;
-    height: 200px;
     position: absolute;
-    top: 27.7vh;
+    overflow: hidden;
+    padding: auto;
+    padding-top: 30vh;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -2;
+}
+
+.figur-snakkebobble{
+    transition: all 1000ms ease-in-out;
+    left: -50px;
+    position: absolute;
+    margin-left: -150px;
+    width: 300px;
+    z-index: -2;
+}
+
+.figur-snakkebobble > .ingrediens-knapp{
+    left: -50px;
+    position: absolute;
 }
 
 .figur{
-    position: absolute;
-    left: -50px;
-    transition: all 1000ms ease-in-out;
     width: 300px;
-    margin-left: -150px;
-    z-index: -2;
 }
 
 .figur-inn{
@@ -97,4 +111,43 @@
 
 .figur-ut{
     left: 110%;
+}
+
+
+.snakkebobble > .ingrediens-knapp{
+    width: 3rem;
+    height: 3rem;
+}
+
+.snakkebobble{
+    background-image: url('../img/snakkebobble.png');
+    background-size: cover;
+    top: -100px;
+    position: absolute;
+    left: -100%;
+    width: 24rem;
+    height: 11rem;
+    scale: 0;
+    transition: scale 1000ms ease-in-out;
+    transform-origin: right;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.snakkebobble-inn{
+    scale: 1;
+}
+
+.snakkebobble-ut{
+    scale: 0;
+}
+
+.spill-knapp{
+    font-size: 2rem;
+}
+
+@media (max-width: 900px){
+    .figur-inn{
+        left: 70%;
+    }
 }
