--- a/css/spill.css
+++ b/css/spill.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+html, body {
+    height: 100%;
+    font-family: 'VT323', monospace;
+    margin: 0;
+    line-height: 1.5rem;
+    font-size: 1.2rem;
+    overflow: hidden;
+}
+
 .spill-container{
     height: 100vh;
     padding: 1rem;
@@ -38,7 +48,9 @@
     z-index: -1;
 }
 
+
 .timer-container{
+    display: flex;
     margin-inline: auto;
     width: 50vw;
     border-radius: 10px;
@@ -50,6 +62,8 @@
     position: relative;
 }
 .timer-text{
+    align-self: center;
+    margin: 0;
     position: absolute;
     text-align: center;
     width: 100%;
@@ -68,6 +82,7 @@
 .poeng{
     text-shadow: 3px 0px 5px rgb(110, 110, 110);
     color: aliceblue;
+    margin: 0;
     font-size: 4rem;
     position: absolute;
     top: 3rem;
@@ -89,7 +104,7 @@
 
 .figur-snakkebobble{
     transition: all 1000ms ease-in-out;
-    left: -50px;
+    left: -100px;
     position: absolute;
     margin-left: -150px;
     width: 300px;
@@ -102,7 +117,7 @@
 }
 
 .figur{
-    width: 300px;
+    width: 20vw;
 }
 
 .figur-inn{
@@ -124,7 +139,7 @@
     background-size: cover;
     top: -100px;
     position: absolute;
-    left: -100%;
+    left: -120%;
     width: 24rem;
     height: 11rem;
     scale: 0;
@@ -153,7 +168,7 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    height: 4rem;
+    height: max-content;
     top: 1rem;
     left: 1rem;
     padding: 1rem;
@@ -191,6 +206,7 @@
 }
 
 .game-over{
+    font-size: 2rem;
     background-color: rgb(235, 155, 155);
     position: absolute;
     top: 0;
