--- a/css/css.css
+++ b/css/css.css
@@ -2,12 +2,14 @@ html, body {
     height: 100%;
     font-family: Monaco, monospace;
     margin: 0;
+    background-color: maroon;
 }
 
 
 /* HJEMSIDE*/
 h1 {
     text-align: center;
+    color: white;
 }
 
 .container {
@@ -26,8 +28,10 @@ h1 {
 }
 
 .button {
-    background-color: #CC7722; 
-    border: none;
+    background-color: rgba(255, 0, 0, 0); 
+    border: solid;
+    border-width: 5px;
+    border-color: white;
     color: white;
     padding: 15px 32px;
     text-align: center;
@@ -113,10 +117,14 @@ h4 {
 
 
 .buttonlink1 {
-    background-color: maroon;
-    border: none;
+    height: 70px;
+    width: 200px;
+    background-color: rgba(255, 0, 0, 0);
+    border-style: solid;
+    border-width: 5px;
+    border-color: white;
     color: white;
-    padding: 20px 34px;
+    padding: 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -126,10 +134,14 @@ h4 {
 }
 
 .buttonlink2 {
-    background-color: maroon;
-    border: none;
+    height: 70px;
+    width: 200px;
+    background-color: rgba(255, 0, 0, 0);
+    border-style: solid;
+    border-width: 5px;
+    border-color: white;
     color: white;
-    padding: 20px 57px;
+    padding: 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -146,12 +158,15 @@ h4 {
     float: left;
     width: 20%;
     height: 400px;
-    background-color: #00301E;
+    background-color: rgba(255, 0, 0, 0);
     text-align: center;
     color: white;
     margin-top: 50px;
     margin-bottom: 50px;
     margin-left: 50px;
+    border: solid;
+    border-width: 5px;
+    border-color: white;
 }
 
 
@@ -170,8 +185,10 @@ h4 {
 }
 
 .buttontilbake {
-    background-color: #CC7722; 
-    border: none;
+    background-color: rgba(255, 0, 0, 0);
+    border-style: solid;
+    border-width: 5px;
+    border-color: white;
     color: white;
     padding: 15px 32px;
     text-align: center;
