--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 html, body {
+    width: 100%;
     height: 100%;
     font-family: 'VT323', monospace;
     margin: 0;
@@ -20,12 +21,12 @@ h3{
 }
 
 .container {
-    padding: 2rem;
-    height: 100vh;
+    /* padding: 2rem; */
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
-/* start spill knapp */
 .center {
     margin: 0;
     position: absolute;
@@ -52,7 +53,7 @@ input{
     border-radius: 10px;
     text-shadow: 2px 2px 2px black;
     color: white;
-    padding: 14px 32px;
+    padding: 0.4em 1em;
     text-align: center;
     text-decoration: none;
 }
@@ -125,7 +126,6 @@ h4 {
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
-
 }
 
 .tab button {
@@ -207,19 +207,16 @@ h4 {
     position: absolute;
     width: 100vw;
     height: 100vh;
+    z-index: -1;
 }
-
-
-
-
 
 /* Instruksjoner og om oss*/
 
-
-
 .leftcorner {
+    color: black;
+    background-color: black;
     margin: 0;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     /*-ms-transform: translate(-50%, -50%);
@@ -241,12 +238,14 @@ h4 {
 
 
   .instruksjoncontainer {
+    background-color: white;
     height: auto;
-    width: 900px;
+    width: 100vw;
     position: relative;
     margin: auto;
     border: 1px solid lightgray;
     text-align: center;
+    padding: 3rem;
   }
 
 
@@ -320,6 +319,52 @@ h4 {
     height: 2rem;
     cursor:pointer;
     outline:none;
+}
+
+@media (max-width:900px) {
+    body{
+        font-size: 1rem;
+        background-color: #5fcde4;
+    }
+    
+    .container{
+        position: absolute;
+        bottom: 0;
+        background-color: #847e87;
+        height: 65%;
+    }
+    
+    .tab .button{
+        font-size: 0.8rem;
+    }
+    .center .button{
+        font-size: 1.4rem;
+    }
+
+    .background{
+        margin-top: 30%;
+        max-width: 100%;
+        /* display: none; */
+        height:auto;
+        z-index: 5;
+    }
+
+    .highscore-container{
+        border-radius: 1rem 1rem 0 0;
+        max-width: 100%;
+    }
+
+    .tab{
+        float:none;
+        margin-inline: auto;
+        margin-top: 7rem;
+        justify-content: flex-start;
+        width: max-content;
+    }
+
+    .center{
+        top: 15%;
+    }
 }
 
 
