--- a/css/spill.css
+++ b/css/spill.css
@@ -117,7 +117,7 @@ html, body {
 }
 
 .figur{
-    width: 20vw;
+    width: 260px;
 }
 
 .figur-inn{
@@ -139,7 +139,7 @@ html, body {
     background-size: cover;
     top: -100px;
     position: absolute;
-    left: -120%;
+    left: -130%;
     width: 24rem;
     height: 11rem;
     scale: 0;
@@ -207,7 +207,7 @@ html, body {
 
 .game-over{
     font-size: 2rem;
-    background-color: rgb(235, 155, 155);
+    background-color: white;
     position: absolute;
     top: 0;
     right: 0;
@@ -234,10 +234,8 @@ html, body {
     scale: 1;
 }
 
-
-
-@media (max-width: 900px){
-    .figur-inn{
+@media (max-width: 1050px){
+   .figur-inn{
         left: 70%;
-    }
+    } 
 }
