--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 
 html, body {
     width: 100%;
-    height: 100%;
+    height: min-content;
     font-family: 'VT323', monospace;
     margin: 0;
     line-height: 1.5rem;
@@ -21,10 +21,14 @@ h3{
 }
 
 .container {
-    /* padding: 2rem; */
+    padding: 2rem;
     width: 100%;
     height: 100%;
-    position: relative;
+    position: absolute;
+}
+
+.container * {
+    z-index: 6;
 }
 
 .center {
@@ -179,6 +183,8 @@ input{
     cursor: pointer;
   }
 
+
+
 @media (max-width:900px) {
     body{
         font-size: 1rem;
@@ -187,9 +193,10 @@ input{
     
     .container{
         position: absolute;
-        bottom: 0;
+        top: 150px;
         background-color: #847e87;
-        height: 65%;
+        height: 100vh;
+        padding: 0;
     }
     
     .tab .button{
@@ -200,22 +207,17 @@ input{
     }
 
     .background{
-        margin-top: 30%;
+        margin-top: 100px;
         max-width: 100%;
-        /* display: none; */
         height:auto;
-        z-index: 5;
-    }
-
-    .highscore-container{
-        border-radius: 1rem 1rem 0 0;
-        max-width: 100%;
+        z-index: 1;
     }
 
     .tab{
+        height: 100px; 
         float:none;
         margin-inline: auto;
-        margin-top: 7rem;
+        margin-top: 10rem;
         justify-content: flex-start;
         width: max-content;
     }
@@ -224,3 +226,11 @@ input{
         top: 15%;
     }
 }
+
+@media (max-width: 500px) {
+
+    .highscore-container{
+        max-width: 100%;
+    }
+}
+
